<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textDirection="rtl"
        android:layoutDirection="rtl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_score"
            android:textSize="20dp"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:digits="@string/abc"
            android:maxLength="8"
            android:textSize="20dp"
            android:textDirection="rtl"
            android:layout_marginLeft="80dp"
            >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="@string/ok"
            android:id="@+id/ok"/>

    </LinearLayout>

</LinearLayout>